applications/p2p-gateway/kustomize/overlays/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2p-gateway
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: p2p.$(INGRESS_DOMAIN)
      http:
        paths:
          - backend:
              service:
                name: p2p-gateway
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - p2p.$(INGRESS_DOMAIN)
